# dotenv-cpp

./: CMakeLists.txt  Makefile  README.md  packages.cmake
include/: CMakeLists.txt
include/dotenv/: CMakeLists.txt  dotenv  except.hpp  load.hpp
src/: CMakeLists.txt
src/libdotenv/: CMakeLists.txt  load.cpp  parse.cpp  parse.hpp  parse.test.cpp
test/: env
